--- a/public/manifest.json
+++ b/public/manifest.json
@@ -5,7 +5,7 @@
     "start_url": "/",
     "display": "standalone",
     "background_color": "#0a0a0a",
-    "theme_color": "#ededed",
+    "theme_color": "#0a0a0a",
     "icons": [
       {
         "src":   "/icons/CapturA-Icon-192.png",
